[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-rerunner"
version = "0.1.0"
description = "Headless GitHub Actions CI auto-rerunner"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["github", "actions", "ci", "rerun", "automation"]
dependencies = [
    "PyGithub>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gh-rerunner = "gh_rerunner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_rerunner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
