[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-rerunner"
version = "0.1.0"
description = "Headless GitHub Actions CI auto-rerunner"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["github", "actions", "ci", "rerun", "automation"]
dependencies = [
    "PyGithub>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "aiohttp>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gh-rerunner = "gh_rerunner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_rerunner"]

[tool.hatch.build.targets.wheel.force-include]
"src/gh_rerunner/web/pages/index.html" = "gh_rerunner/web/pages/index.html"
"src/gh_rerunner/web/pages/auth.html" = "gh_rerunner/web/pages/auth.html"
"src/gh_rerunner/web/pages/add-targets.html" = "gh_rerunner/web/pages/add-targets.html"
"src/gh_rerunner/web/static/common.css" = "gh_rerunner/web/static/common.css"
"src/gh_rerunner/web/static/common.js" = "gh_rerunner/web/static/common.js"

[tool.pytest.ini_options]
testpaths = ["tests"]
